Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,21 +1,14 @@
 ---
-name: バグ報告
-about: Create a report to help us improve
+name: 機能要望
+about: Suggest an idea for this project
 title: ''
 labels: ''
 assignees: ''
 
 ---
 
-**エラー内容**
-問題の内容を記述
+**欲しい機能**
+詳細を説明してください。
 
-**再現方法**
-再現手順を列挙
-
-**バージョン・環境**
- - IPMsg ver (principle, latest ver) :
- - OS ver:
-
-**スクリーンショット**
-もしあれば、問題発生時のスクリーンショット
+**補足**
+機能要望に関する追加情報や、スクリーンショットがあれば追加します。
