Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,14 +1,21 @@
 ---
-name: 機能要望
-about: Suggest an idea for this project
+name: バグ報告
+about: Create a report to help us improve
 title: ''
 labels: ''
 assignees: ''
 
 ---
 
-**欲しい機能**
-詳細を説明してください。
+**エラー内容**
+問題の内容を記述
 
-**補足**
-機能要望に関する追加情報や、スクリーンショットがあれば追加します。
+**再現方法**
+再現手順を列挙
+
+**バージョン・環境**
+ - IPMsg ver (principle, latest ver) :
+ - OS ver:
+
+**スクリーンショット**
+もしあれば、問題発生時のスクリーンショット
