--- a/.github/ISSUE_TEMPLATE/-------.md
+++ b/.github/ISSUE_TEMPLATE/-------.md
@@ -1,14 +1,20 @@
 ---
 name: 機能リクエスト
-about: 機能リクエスト
+about: "（日本語）"
 title: ''
 labels: ''
 assignees: ''
 
 ---
 
-**機能リクエスト**
-内容を説明します。
+**Is your feature request related to a problem? Please describe.**
+A clear and concise description of what the problem is. Ex. I'm always frustrated when [...]
 
-**補足**
-機能リクエストに関する補足やスクリーンショットがあれば追加します。
+**Describe the solution you'd like**
+A clear and concise description of what you want to happen.
+
+**Describe alternatives you've considered**
+A clear and concise description of any alternative solutions or features you've considered.
+
+**Additional context**
+Add any other context or screenshots about the feature request here.
